--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "react": "18.0.0",
     "react-native": "0.69.0",
-    "react-native-reanimated": "^2.14.4"
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-reanimated-carousel": "^3.3.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
